--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <div class="page">
     <header class="header page__position">
       <img class="header__logo" src="./images/logo/logo-white.svg" alt="Логотип Mesto.">
-      <!-- <hr class="header__line"> -->
     </header>
 
     <main class="content page__position">
@@ -79,7 +78,7 @@
   </div>
 
 
-  <form class="popup ">  <!-- popup_opened  -->
+  <form class="popup popup_opened">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <input class="popup__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
