--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="content page__position">
 
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар.">
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка.">
         <div class="profile__info">
           <h1 class="profile__title">Жак-Ив Кусто<button class="profile__buttom-info" type="button"></button></h1>
           <p class="profile__subtitle">Исследователь океана</p>
@@ -78,25 +78,29 @@
   </div>
 
 
-  <form class="popup popup_opened">  <!-- popup_opened  -->
+  <div class="popup  popup_opened">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
-      <input class="popup__input popup__input_last" type="text" name="character" placeholder="Исследователь океана" required>
-      <button class="popup__button" type="submit">Сохранить</button>
+      <form class="form" action="#">
+        <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
+        <input class="form__input form__input_last" type="text" name="character" placeholder="Исследователь океана" required>
+        <button class="form__button" type="submit">Сохранить</button>
+      </form>
       <button class="popup__button-сlose"></button>
     </div>
-  </form>
+  </div>
 
-  <form class="popup  ">  <!-- popup_opened  -->
+  <div class="popup  ">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
-      <input class="popup__input popup__input_last" type="text" name="character" placeholder="Исследователь океана" required>
-      <button class="popup__button" type="submit">Сохранить</button>
+      <form class="form" action="#">
+        <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
+        <input class="form__input form__input_last" type="text" name="character" placeholder="Исследователь океана" required>
+        <button class="form__button" type="submit">Сохранить</button>
+      </form>
       <button class="popup__button-сlose"></button>
     </div>
-  </form>
+  </div>
 
 
 </body>
