--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="popup  popup_opened">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="form" action="#">
+      <form class="form">
         <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
         <input class="form__input form__input_last" type="text" name="character" placeholder="Исследователь океана" required>
         <button class="form__button" type="submit">Сохранить</button>
@@ -93,7 +93,7 @@
   <div class="popup  ">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="form" action="#">
+      <form class="form">
         <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
         <input class="form__input form__input_last" type="text" name="character" placeholder="Исследователь океана" required>
         <button class="form__button" type="submit">Сохранить</button>
