--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 
 
-  <div class="popup">  <!-- popup_opened  -->
+  <div class="popup popup_opened">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="form" name="form_data">
