--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватарка.">
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто<button class="profile__buttom-info" type="button"></button></h1>
+          <div class="profile__line">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__buttom-info" type="button"></button>
+          </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
         <button class="profile__buttom-add" type="button"></button>
@@ -80,7 +83,7 @@
   </div>
 
 
-  <div class="popup popup_opened">  <!-- popup_opened  -->
+  <div class="popup">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="form" name="form_data">
