--- a/index.html
+++ b/index.html
@@ -31,48 +31,7 @@
 
       <section class="elements">
         <ul class=cards>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/kamchatka.jpg" alt="Вулкан на Камчатки.">
-            <div class="cards__title">
-              <h2 class="cards__text">Камчатка</h2>
-              <button class="cards__heart " type="button"></button>   <!-- cards__heart_active -->
-            </div>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/gelendjig.jpg" alt="Берег Геленджика.">
-            <div class="cards__title">
-              <h2 class="cards__text">Геленджик</h2>
-              <button class="cards__heart" type="button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/kivach.jpg" alt="Водопад Кавач.">
-            <div class="cards__title">
-              <h2 class="cards__text">Кивач</h2>
-              <button class="cards__heart" type="button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/sayani.jpg" alt="горы Саяны.">
-            <div class="cards__title">
-              <h2 class="cards__text">Саяны</h2>
-              <button class="cards__heart" type="button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/stolbi.jpg" alt="Ленские столбы.">
-            <div class="cards__title">
-              <h2 class="cards__text">Ленские столбы на реке лена</h2>
-              <button class="cards__heart" type="button"></button>
-            </div>
-          </li>
-          <li class="cards__item">
-            <img class="cards__image" src="./images/valday.jpg" alt="Остров на Валдае.">
-            <div class="cards__title">
-              <h2 class="cards__text">Валдай</h2>
-              <button class="cards__heart" type="button"></button>
-            </div>
-          </li>
+
         </ul>
       </section>
     </main>
@@ -83,17 +42,54 @@
   </div>
 
 
-  <div class="popup popup_opened">  <!-- popup_opened  -->
+  <div class="popup  popup_type_profile">  <!-- popup_opened  -->
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="form" name="form_data">
-        <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required>
-        <input class="form__input form__input_item_last" type="text" name="character" placeholder="Исследователь океана" required>
+        <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required value="">
+        <input class="form__input form__input_item_last" type="text" name="character" placeholder="Исследователь океана" required value="">
         <button class="form__button" type="submit">Сохранить</button>
       </form>
       <button class="popup__button-сlose" type="button"></button>
     </div>
   </div>
+
+  <div class="popup popup_type_addCard">  <!-- popup_opened -->
+    <div class="popup__container">
+      <h2 class="popup__title">Новое место</h2>
+      <form class="form" name="form_data">
+        <input class="form__input " type="text" name="name" placeholder="Название" required >
+        <input class="form__input form__input_item_last" type="text" name="character" placeholder="Ссылка на картинку" required >
+        <button class="form__button" type="submit">Создать</button>
+      </form>
+      <button class="popup__button-сlose" type="button"></button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_openImegeCard ">  <!-- popup_opened -->
+    <div class="popup__container-openImegeCard">
+      <img class="popup__img" src="" alt="">
+      <button class="popup__button-сlose" type="button"></button>
+      <h2 class="popup__title-openImegeCard">Челябинск</h2>
+    </div>
+  </div>
+
+
+
+  <template id="templateCards">
+    <li class="cards__item">
+      <img class="cards__image" src="./images/kamchatka.jpg" alt="Вулкан на Камчатки.">
+      <div class="cards__title">
+        <h2 class="cards__text">Камчатка</h2>
+        <button class="cards__heart " type="button"></button> <!-- cards__heart_active -->
+      </div>
+      <img class="cards__trash" src="./images/Trash.svg" alt="Корзина.">
+    </li>
+  </template>
+
+
+
+  <script src="./script/index.js"></script>
 
 </body>
 </html>
