Функционал страницы. Второй коммит

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="popup__container">
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="form" name="form_data">
-        <input class="form__input " type="text" name="name" placeholder="Жак-Ив Кусто" required value="">
-        <input class="form__input form__input_item_last" type="text" name="character" placeholder="Исследователь океана" required value="">
+        <input class="form__input " type="text" name="name" placeholder="Имя" required value="">
+        <input class="form__input form__input_item_last" type="text" name="character" placeholder="О себе" required value="">
         <button class="form__button" type="submit">Сохранить</button>
       </form>
       <button class="popup__button-сlose" type="button"></button>
@@ -70,11 +70,9 @@
     <div class="popup__container-openImegeCard">
       <img class="popup__img" src="" alt="">
       <button class="popup__button-сlose" type="button"></button>
-      <h2 class="popup__title-openImegeCard">Челябинск</h2>
+      <h2 class="popup__title-openImegeCard">Картинка</h2>
     </div>
   </div>
-
-
 
   <template id="templateCards">
     <li class="cards__item">
@@ -87,9 +85,6 @@
     </li>
   </template>
 
-
-
-  <script src="./script/index.js"></script>
-
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
