Функционал страницы. Второй коммит

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="popup popup_type_openImegeCard ">  <!-- popup_opened -->
     <div class="popup__container-openImegeCard">
-      <img class="popup__img" src="" alt="">
+      <img class="popup__img" src="_" alt="картинка">
       <button class="popup__button-сlose" type="button"></button>
       <h2 class="popup__title-openImegeCard">Картинка</h2>
     </div>
