--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="shortcut icon" href="./images/logo/logo___icon.png">
+    <link rel="shortcut icon" href="<%=require('./images/logo/logo___icon.png')%>">
 </head>
 <body class="body">
 
